force-app/main/default/objects/ProjectAccount__c/ProjectAccount__c.object-meta.xml
<CustomObject>
    <description>Project Account maps an Account to a Project and defines how the Account will be billed. Project Account is related to Project, Account, and Account Address.</description>
    <label>Project Account</label>
    <nameField>
        <displayFormat>PA-{0000000}</displayFormat>
        <label>Project Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>