force-app/main/default/objects/ProjectAccount__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please make sure this account&#39;s &#39;Can Request Project&#39; setting is enabled.</errorMessage>
        <filterItems>
            <field>Account.CanRequestProjects__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Project Accounts</relationshipLabel>
    <relationshipName>Project_Accounts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>