force-app/main/default/objects/ProjectAccount__c/fields/BillToAddress__c.field-meta.xml
<CustomField>
    <fullName>BillToAddress__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill To Address</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>AccountAddress__c.Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>AccountAddress__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Billing Address</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AccountAddress__c</referenceTo>
    <relationshipLabel>Project Accounts</relationshipLabel>
    <relationshipName>ProjectAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>