force-app/main/default/objects/ProjectAccount__c/fields/BillToContactName__c.field-meta.xml
<CustomField>
    <fullName>BillToContactName__c</fullName>
    <formula>BillToContact__r.LastName &amp; &quot;, &quot; &amp;  BillToContact__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BillTo Contact</label>
    <type>Text</type>
</CustomField>