force-app/main/default/objects/ProjectAccount__c/fields/SplitValue__c.field-meta.xml
<CustomField>
    <fullName>SplitValue__c</fullName>
    <label>% / $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>